chore: fixed styling